Fixed component spacing on mainpage

--- a/src/styles/mainpage/speakers.module.css
+++ b/src/styles/mainpage/speakers.module.css
@@ -1,7 +1,7 @@
 @import "../common/palette.css";
 
 .speakersSection {
-  margin-top: 5rem;
+  margin-top: 13rem;
   margin-bottom: 8rem;
 }
 
