--- a/src/styles/mainpage/tickets.module.css
+++ b/src/styles/mainpage/tickets.module.css
@@ -44,12 +44,12 @@
 }
 
 .section {
-  margin: 2rem 0;
+  margin-top: 15rem;
   background: url("../../images/showcase_events_filter.jpg") center center /
     cover;
   text-align: center;
   color: var(--white);
-  padding: 10% 20%;
+  padding: 15% 20%;
 }
 
 @media (max-width: 900px) {
